overflow-fixed

--- a/src/css/side-bar.css
+++ b/src/css/side-bar.css
@@ -2,11 +2,15 @@
     display: none;
   }
   
-  #side-bar.close .options{
+  #side-bar.close .options,
+  #side-bar.close .options *,
+  #side-bar.close .options *::after {
     width: 0;
+    padding: 0;
+    font-size: 0;
   }
 
-  #side-bar.open .options{
+  #side-bar.open .options {
     width: 85vw;
   }
 
